// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui - 1. Constants should return constants 1`] = `
Object {
  "ADD_TOAST": "mcs-lite-admin-web/ui/ADD_TOAST",
  "REMOVE_IS_RESTART_REQUIRED": "mcs-lite-admin-web/ui/REMOVE_IS_RESTART_REQUIRED",
  "REMOVE_TOAST": "mcs-lite-admin-web/ui/REMOVE_TOAST",
  "SET_IS_RESTART_REQUIRED": "mcs-lite-admin-web/ui/SET_IS_RESTART_REQUIRED",
  "SET_LOADED": "mcs-lite-admin-web/ui/SET_LOADED",
  "SET_LOADING": "mcs-lite-admin-web/ui/SET_LOADING",
  "STORE_IS_RESTART_REQUIRED": "mcs-lite-admin-web/ui/STORE_IS_RESTART_REQUIRED",
}
`;

exports[`ui - 2. Action Creators should return addToast actions 1`] = `
Object {
  "payload": Object {
    "children": undefined,
    "key": "mockUuid()",
    "kind": undefined,
  },
  "type": "mcs-lite-admin-web/ui/ADD_TOAST",
}
`;

exports[`ui - 2. Action Creators should return removeIsRestartRequired actions 1`] = `
Object {
  "type": "mcs-lite-admin-web/ui/REMOVE_IS_RESTART_REQUIRED",
}
`;

exports[`ui - 2. Action Creators should return removeToast actions 1`] = `
Object {
  "payload": "key",
  "type": "mcs-lite-admin-web/ui/REMOVE_TOAST",
}
`;

exports[`ui - 2. Action Creators should return setIsRestartRequired actions 1`] = `
Object {
  "payload": true,
  "type": "mcs-lite-admin-web/ui/SET_IS_RESTART_REQUIRED",
}
`;

exports[`ui - 2. Action Creators should return setLoaded actions 1`] = `
Object {
  "type": "mcs-lite-admin-web/ui/SET_LOADED",
}
`;

exports[`ui - 2. Action Creators should return setLoading actions 1`] = `
Object {
  "type": "mcs-lite-admin-web/ui/SET_LOADING",
}
`;

exports[`ui - 2. Action Creators should return storeIsRestartRequired actions 1`] = `
Object {
  "type": "mcs-lite-admin-web/ui/STORE_IS_RESTART_REQUIRED",
}
`;

exports[`ui - 4. Reducer should handle ADD_TOAST 1`] = `
Object {
  "toasts": Array [
    Object {
      "message": "message",
    },
  ],
}
`;

exports[`ui - 4. Reducer should handle REMOVE_TOAST 1`] = `
Object {
  "toasts": Array [],
}
`;

exports[`ui - 4. Reducer should handle SET_IS_RESTART_REQUIRED 1`] = `
Object {
  "isRestartRequired": false,
}
`;

exports[`ui - 4. Reducer should handle SET_LOADED 1`] = `
Object {
  "isLoading": false,
}
`;

exports[`ui - 4. Reducer should handle SET_LOADING 1`] = `
Object {
  "isLoading": true,
}
`;

exports[`ui - 4. Reducer should return the initial state 1`] = `
Object {
  "isLoading": false,
  "isRestartRequired": false,
  "toasts": Array [],
}
`;
